[package]
name = "rustbuster"
version = "0.1.0"
authors = ["phra <greensoncio@gmail.com>", "ps1dr3x <michele@federici.tech>"]
edition = "2018"

[dependencies]
hyper = "^0.12.28"
pretty_env_logger = "^0.3.0"
log = "^0.4.6"
futures = "^0.1.27"
hyper-tls = "^0.3.2"
native-tls = "^0.2.3"
serde = { version = "^1.0.91", features = ["derive"] }
serde_json = "^1.0.39"

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions", "color" ]
