[package]
name = "rustbuster"
version = "3.0.3"
authors = ["phra <greensoncio@gmail.com>", "ps1dr3x <michele@federici.tech>"]
edition = "2018"

[[bin]]
name = "rustbuster"
path = "src/main.rs"

[lib]
name = "librustbuster"
path = "src/lib.rs"

[dependencies]
hyper = "^0.12.28"
pretty_env_logger = "^0.3.0"
log = "^0.4.6"
futures = "^0.1.27"
hyper-tls = "^0.3.2"
native-tls = "^0.2.3"
serde = { version = "^1.0.91", features = ["derive"] }
serde_json = "^1.0.39"
indicatif = "^0.11.0"
chrono = "^0.4.6"
terminal_size = "^0.1.8"
itertools = "^0.8.0"
regex = "^1.1.7"
galvanic-test = "^0.2.0"
galvanic-assert = "0.8.7"
criterion = "^0.2.11"

[[bench]]
name = "rustbuster"
harness = false

[dependencies.clap]
version = "^2.33"
default-features = false
features = [ "suggestions", "color" ]

[dev-dependencies]

[profile.release]
opt-level = 'z'
lto = true
